fix hero layout on mobile

--- a/styles/hero.css
+++ b/styles/hero.css
@@ -218,7 +218,142 @@ section.hero {
 
 @media (width <= 23.4375em) {
     section.hero {
-        max-width: 100%;
+        max-width: 23.4375rem;
+        width: 100%;
+        height: 44rem;
+
+        padding: 1rem 1.5rem;
+        margin-inline: auto;
+
+        display: flex;
         flex-direction: column-reverse;
+        overflow: hidden;
+
+        & h1 {
+            max-width: 40rem;
+        }
+
+        & h1 div {
+            display: inline-block;
+            overflow: hidden;
+            height: 5rem;
+            width: min-content;
+            vertical-align: bottom;
+        }
+
+        & h1 span {
+            display: block;
+            animation: slideUp 5s 2s infinite;
+        }
+
+        & h1 span:nth-child(1),
+        & h1 span:nth-child(4) {
+            color: var(--snitap-sky-mid);
+        }
+
+        & h1 span:nth-child(2) {
+            color: var(--snitap-joy-mid);
+        }
+
+        & h1 span:nth-child(3) {
+            color: var(--snitap-leaf-mid);
+        }
+
+        & .buttons {
+            display: flex;
+            flex-direction: column-reverse;
+            gap: 2rem;
+            margin-top: 3rem;
+
+            & .button {
+                display: flex;
+                align-items: center;
+                gap: 0.75rem;
+
+                border-radius: 5rem;
+
+                transition: scale 350ms;
+
+                &.buy {
+                    padding: 1.5rem 3rem;
+                    background-color: var(--snitap-sun);
+                }
+
+                &.play span {
+                    padding: 1.5rem;
+                    border-radius: 50%;
+                    background-color: white;
+                    display: flex;
+                }
+
+                &:hover {
+                    scale: 1.1;
+                }
+            }
+
+            & .shadow {
+                box-shadow: 0 2px 5px rgb(0 0 0 / 0.1),
+                    0 9px 9px rgb(0 0 0 / 0.09), 0 20px 12px rgb(0 0 0 / 0.05),
+                    0 15px 36px rgb(0 0 0 / 0.01);
+            }
+        }
+
+        & > div {
+            max-width: 19.5rem;
+            height: 18.5rem;
+        }
+
+        & > div:nth-child(2) {
+            display: block;
+            width: 100%;
+            max-width: 30.5rem;
+            height: 30.5rem;
+
+            & .content {
+                width: 100%;
+                height: 100%;
+                position: relative;
+            }
+
+            & img {
+                position: absolute;
+                width: 100%;
+            }
+
+            & img[src*='ellipse'] {
+                width: 94%;
+                top: 3%;
+                left: 3%;
+
+                transform: translateX(200%);
+                animation: slideIn 3s 200ms ease forwards;
+            }
+
+            & img[src*='patins'] {
+                z-index: 1;
+
+                transform: translateX(200%);
+                animation: slideIn 3s ease forwards;
+            }
+
+            & img[src*='stars-1'] {
+                max-width: 5.5rem;
+                top: 30%;
+                z-index: 0;
+
+                opacity: 0;
+                transform: translateX(400%);
+                animation: slideIn 2s 800ms ease both, appear 100ms 800ms both;
+            }
+
+            & img[src*='stars-2'] {
+                max-width: 2.5rem;
+                right: 0;
+                bottom: 35%;
+
+                transform: translateX(400%);
+                animation: slideIn 2.2s 800ms ease forwards;
+            }
+        }
     }
 }
